# VideoProcessing

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
